Fix menu flicker on page load

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -63,6 +63,10 @@
 			}
 		}
 
+		.theme-toggle-container {
+			width: 8.5em;
+		}
+
 		#theme-toggle {
 			cursor: pointer;
 		}
